--- a/lib/blog_web/templates/page/index.html.eex
+++ b/lib/blog_web/templates/page/index.html.eex
@@ -1,6 +1,18 @@
 <section class="phx-hero">
   <h1><%= gettext "Welcome to %{name}!", name: "Phoenix" %></h1>
   <p>Peace-of-mind from prototype to production</p>
+  <h3 style="color:red">AEW CARAIO DA PORRA!!!!!</h3>
+</section>
+
+<section class="row">
+  <article class="column">
+    <h2>Sample CRUDs</h2>
+    <ul>
+      <li>
+        <a href="/posts">Posts</a>
+      </li>
+    </ul>
+  </article>
 </section>
 
 <section class="row">
